# PhotoBatch

./: .gitignore  CITATION.cff  Config.ini  Event_Sheet_Example.csv  Event_Sheet_Example_Legacy.csv  File_Pair_Example_Sheet.csv  PhotoBatchGUI.py  Photometry Analyzer BATCH v 0-1-4 NO GUI.py  Photometry Analyzer BATCH.py  README.md  VMCL_4_Event_Sheet.csv  VMCL_File_Sheet.csv  main.py  main.spec  pyproject.toml  requirements.txt
photobatch/: Config.ini  __init__.py  config.json  config_manager.py  exceptions.py
photobatch/GUI/: interface.py  launch.py
photobatch/Processing/: data_processor.py  hdf_store.py
photobatch/Processing/IO/: __init__.py  output.py  sync.py
photobatch/Processing/IO/Behaviour/: __init__.py  abet.json  abet.py
photobatch/Processing/IO/Photometry/: __init__.py  doric.json  doric.py
photobatch/Processing/Process/: __init__.py  advanced_analysis.py  event.json  event.py  trial.py
photobatch/Processing/Signal/: __init__.py  filter.json  filter.py  fitting.json  fitting.py  utilities.json  utilities.py
tests/: conftest.py  test_integration.py  test_signal_processing.py  test_sync.py
