[build-system]
requires = ["setuptools>=82.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "photobatch"
version = "1.0.0"
description = "Batch processing pipeline for fiber photometry and behavioural data"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "numpy==2.4.3",
    "scipy==1.17.1",
    "pandas==3.0.1",
    "h5py==3.16.0",
    "python-dateutil==2.9.0.post0",
    "statsmodels==0.14.6",
    "scikit-learn==1.8.0",
]

[project.optional-dependencies]
gui = [
    "PySide6==6.10.2",
    "matplotlib==3.10.8",
]

[project.scripts]
photobatch = "photobatch.GUI.launch:launch_photobatch"

[tool.setuptools.packages.find]
where = ["."]
include = ["photobatch*"]

[tool.setuptools.package-data]
"photobatch" = ["**/*.json"]
