[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photobatch"
version = "1.0.0"
description = "Batch processing pipeline for fiber photometry and behavioural data"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "numpy>=2.0.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "h5py>=3.8.0",
    "python-dateutil>=2.8.2",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.2.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.5.0",
    "matplotlib>=3.7.0",
]
test = [
    "pytest>=8.0.0",
]

[project.scripts]
photobatch = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["photobatch*"]

[tool.setuptools.package-data]
"photobatch" = ["**/*.json"]
